# range_limits_pymc

./: .gitignore  README.md  main.py  pyproject.toml  run_hmc.py  run_map.py
scripts/: aggregate_and_interpolate_bui.py  avonet_pipeline.py  bui_lowres.py  download_prism.py  ebird_ingest.py  ebird_smooth_trial.py  extract_ocean_mask.py  fft_optimization_test  generate_all_path_features.py  hand_fft_test_directional.py  handcrafted_fft_test.py  ingest_bbs_data.py  ingest_bbs_init_check.py  ingest_model_data.py  nodata_inspect.py  plot_maps.py  project_ebird  project_prism.py  reconstruct_map_results  sanity_check_forwardsim.py  test_kernel_physics.py  test_path_features_single_year.py  visualize_bbs_observed_spread.py  visualize_pond_example.py  watermask.py  watermask_project.py
src/: dispersal_precompute.py  dispersal_precompute_directional.py  ingest.py  ingest_directional.py  model.py
src/community_encoder/: analyze_final_z_cube.py  build_final_z_cube.py  climate_vs_z_turnover.py  generate_z_gif.py  latent_interpreter.py  latent_interpreter_ruzicka.py  metric_autoencoder.py  metric_autoencoder_Z.py  metric_autoencoder_Z_ruzicka_global.py  metric_autoencoder_Z_ruzicka_global_full_history.py  optimal_encoder.py  optimal_encoder_ruzicka.py  optimal_encoder_ruzicka_global.py  optimal_encoder_windowed.py  prism_bui_smoothers.py  sanity_check_Z.py  sanity_check_houfin_regression.py  stochastic_encoder.py  stochastic_encoder_ruzicka.py  urbanization_vs_z_turnover.py
src/model/: age_fields.py  age_forward.py  age_priors.py  age_resume_lbfgs.py  age_run_map.py  fields.py  (+6 more)
(+5 files in other folders)
